# ml2_vorbereitung

./: README.md  pyproject.toml
notebooks/: pytorch-cnn.ipynb  pytorch-rnn.ipynb  pytorch_nn.ipynb  pytorch_rnn_gen.ipynb  transfer_learning.ipynb
