[project]
name = "ml2-vorbereitung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12" # Version 3.12.9 ist sehr spezifisch, >=3.12 sollte reichen
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
